<resources>
    <string name="app_name">IntelligentEye</string>
    <string name="image">Image</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="seconds">seconds</string>
    <string name="reflect_on_y_axis">Reflect on Y Axis.</string>
    <string name="reflect_on_x_axis">Reflect on X Axis.</string>
    <string name="pick_image_from_gallery">Pick image from gallery.</string>
    <string name="take_a_photo_from_camera">Take a photo from camera.</string>
    <string name="resize_image">Resize image.</string>
    <string name="crop_image">Crop image.</string>
    <string name="resize">RESIZE</string>
    <string name="crop">CROP</string>
    <string name="fromx">fromX</string>
    <string name="fromy">fromY</string>
    <string name="tox">toX</string>
    <string name="toy">toY</string>
    <string name="undo">Undo</string>
    <string name="process">PROCESS</string>
    <string name="analyze">ANALYZE</string>
    <string name="retinal_disease_detected">Retinal Disease Detected!</string>
    <string name="cataract_detected">Cataract Detected!</string>
    <string name="glaucoma_detected">Glaucoma Detected!</string>
    <string name="no_disease_detected">No Disease Detected</string>
    <string name="confidence">Confidence:</string>
    <string name="timing">Timing:</string>
</resources>